static code refactoring by Idea